--- a/html/booking.html
+++ b/html/booking.html
@@ -17,6 +17,7 @@
         <div class="top-bar">
             <div class="nav-bar">
                 <h3 class="page-title">预 订</h3>
+                <a class="nav-btn fl" href="#" onclick="hrefBack();"><span><i class="fa fa-angle-left fa-2x"></i></span></a>
             </div>
         </div>
         <div class="house-info">
