--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,10 @@
             <div class="swiper-pagination"></div>
         </div>
         <div class="search-bar">
+            <button class="filter-btn" type="button" data-toggle="modal" data-target="#area-modal"><span class="fl" id="area-btn">选择城区</span><span class="fr"><i class="fa fa-map-marker fa-lg fa-fw"></i></span></button>
+            <button class="filter-btn" type="button" data-toggle="modal" data-target="#start-date-modal"><span class="fl" id="start-date-btn">入住日期</span><span class="fr"><i class="fa fa-calendar fa-lg fa-fw"></i></span></button>
+            <button class="filter-btn end-date" type="button" data-toggle="modal" data-target="#end-date-modal"><span class="fl" id="end-date-btn">离开日期</span><span class="fr"><i class="fa fa-calendar fa-lg fa-fw"></i></span></button>
+            <a class="btn search-btn btn-theme" href="#" onclick="goToSearchPage(this);" area-id="" start-date="" end-date="">搜索</a>
             <div class="modal fade" id="area-modal" tabindex="-1" role="dialog" aria-labelledby="area-label">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -49,6 +53,7 @@
                             </div>
                             <script id="area-list-tmpl" type="text/html">
                             {{each areas as area}}
+                                <a href="#" area-id="{{area.area_id}}">{{area.name}}</a>
                             {{/each}}
                             </script>
                         </div>
