--- a/html/detail.html
+++ b/html/detail.html
@@ -18,6 +18,7 @@
         <div class="top-bar">
             <div class="nav-bar">
                 <h3 class="page-title">房间信息</h3>
+                <a class="nav-btn fl" href="#" onclick="hrefBack();"><span><i class="fa fa-angle-left fa-2x"></i></span></a>
             </div>
         </div>
         <div class="swiper-container">
