--- a/html/login.html
+++ b/html/login.html
@@ -35,6 +35,6 @@
     </div>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/js/ihome/captcha.js"></script>
+    <!--<script src="/static/js/ihome/captcha.js"></script>-->
 </body>
 </html>
