--- a/html/lorders.html
+++ b/html/lorders.html
@@ -31,6 +31,8 @@
                         <h3>订单编号：{{order.order_id}}</h3>
                         {{ if 0 == order.status }}
                         <div class="fr order-operate">
+                            <button type="button" class="btn btn-success order-accept" data-toggle="modal" data-target="#accept-modal">接单</button>
+                            <button type="button" class="btn btn-danger order-reject" data-toggle="modal" data-target="#reject-modal">拒单</button>
                         </div>
                         {{/if}}
                     </div>
