--- a/html/my.html
+++ b/html/my.html
@@ -57,6 +57,7 @@
                 </li>
                 <li>
                     <div class="menu-title menu-radius">
+                        <a href="#" onclick="logout();" >退出</a>
                     </div>
                 </li>
             </ul>
